--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -1,10 +1,11 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css?family=Titillium+Web');
-@font-face{
+@font-face {
 	font-family: 'fontelogo';
 	src: url("../_fonts/bubblegum-sans-regular.otf");
 }
 body {
+	font-family: Arial, sans-serif;
 	background-color:#dddddd;
 	color: rgba(0,0,0,1);
 }
@@ -19,8 +20,8 @@ padding: 10px 10px 10px 10px; /* pode colocar apenas 10px quando todos são igua
 
 header#cabecalho img#icone {
 	position: absolute;
-	left:780px; 
-	top: 70px;
+	left:960px; 
+	top:70px;
 
 }
 header#cabecalho {
@@ -28,7 +29,7 @@ header#cabecalho {
 	height: 150px;
 	background: url("../_imagens/glass-logo-peq.jpg") no-repeat 0px 80px;
 }
-header#cabecalho h1{
+header#cabecalho h1 {
 	font-family: 'fontelogo', sans-serif;
 	font-size: 30px;
 	color: #606060;
@@ -48,6 +49,14 @@ header#cabecalho h2 {
 p {
 	text-align: justify; 
 	text-indent: 50px;
+}
+
+a {
+	color: #606060;
+	text-decoration: none;
+}
+a:hover {
+	text-decoration: underline;
 }
 
 /* Formatação de imagem com legendas  */		
@@ -109,49 +118,78 @@ nav#menu a {
 	text-decoration: none;
 
 }
-nav#menu a:hover{
+nav#menu a:hover  {
 	color: white;
 	
 /*Formatação de corpo*/
 }
-section#corpo{
+section#corpo {
 	display: block;
 	width: 500px;
 	float: left;
 	border-right: 1px solid #606060;
 	padding-right: 20px;
 }
-table#tabelaspec{
+article#noticia-principal h2 {
+	font-size: 13pt;
+	color: #606060;
+	background-color: #dddddd;
+	padding: 5px 0px 5px 10px;
+	margin: 10px 0px 10px 0px;
+}
+header#cabecalho-artigo h1 {
+	font-family: sans-serif;
+	font-size: 20pt;
+	color: #606060;
+	margin-bottom: 10px;
+}
+.direita {
+	text-align: right;
+}
+header#cabecalho-artigo h2 {
+	font-size: 13pt;
+	color: #cecece;
+	background-color: #ffffff;
+	margin: 0px;
+}
+header#cabecalho-artigo h3 {
+	font-size: 12pt;
+	color: #606060;
+	background-color: #ffffff;
+	margin: 0px;
+	
+}
+
+table#tabelaspec {
 	border: 1px solid #606060;
 	border-spacing: 0px;
 	margin-left: auto;
 	margin-right: auto;
 }
 
-table#tabelaspec td{
+table#tabelaspec td {
 	border: 1px solid #606060;
 	padding: 10px;
 	text-align: center;
 	vertical-align: middle;
 }
-table#tabelaspec td.ce{
+table#tabelaspec td.ce {
 	color: white;
 	background-color: #606060;
 	vertical-align: top;
 	font-weight: bold;
-
 }
 
-table#tabelaspec td.cd{
+table#tabelaspec td.cd {
 	background-color: #cecece;
 
 }
-table#tabelaspec caption{
+table#tabelaspec caption {
 	color: #888888;
 	font-size: 13pt;
 	font-weight: bolder;
 }
-table#tabelaspec span{
+table#tabelaspec span {
 	display: block;
 	float: right;
 	color: #606060;
@@ -159,12 +197,29 @@ table#tabelaspec span{
 	margin-top: 10px;
 }
 
-aside#lateral{
+aside#lateral {
 	display: block;
 	width: 350px;
 	float: right;
+	background-color: #dddddd;
+	padding: 10px;
+	margin-top: 10px;
+	box-shadow: 2px 2px 2px rgba(0,0,0,0.5);
 }
-footer#rodape{
+aside#lateral h1 {
+	font-family: 'fontelogo', sans-serif;
+	font-size: 20pt;
+	color: #606060;
+	margin-top: 0px;
+
+}
+aside#lateral h2 {
+	background-color: #606060;
+	font-size: 13pt;
+	color: white;
+	padding: 5px;
+}
+footer#rodape {
 	clear:both;
 	border-top: 1px solid #606060;
 }
